fix(css): header align content

--- a/_sass/common/_variables.scss
+++ b/_sass/common/_variables.scss
@@ -71,6 +71,15 @@ $spacers: (
   5:                      map-get($base, spacer) * 3
 );
 
+$layout: (
+  header-height:          5rem,
+  header-height-sm:       3rem,
+  content-max-width:      950px,
+  sidebar-width:          250px,
+  sidebar-header-height:  3rem,
+  aside-width:            220px
+);
+
 $menu: (
   horizontal-spacer: 1,
   horizontal-item-vertical-spacer: 1
