--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -1,3 +1,4 @@
 body {
-  background-color: #9fff9f;
+  // background-color: #737373;
+  // color: #f3f3f3;
 }
